# phreaknic26-badge-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  devbox.json  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  constants.py  db.py  dependencies.py  logs.py  main.py  models.py  utils.py
app/routes/: __init__.py  admin_api.py  admin_pages.py  public.py  system.py
app/services/: __init__.py  badge_renderer.py  firmware_builder.py  patch_firmware_image.py
app/static/: style.css
app/templates/: admin_create_badge.html  admin_index.html  admin_logs.html  admin_queue.html  admin_upload.html  index.html  pizza_easter_egg.html  selection.html
migrations/: env.py
migrations/versions/: 1a7af3fb4e68_add_selected_text_rotation.py  2024_add_badge_unlocked_images.py  2024_add_display_order_to_available_images.py  2024_add_requires_secret_flag.py  2024_add_secret_code_to_available_images.py  2025_expand_mac_address_length.py  3d0f4f3b9d10_add_firmware_columns.py  b8bec1855043_baseline_schema.py  d0b55d5b090c_add_mac_address_to_badges.py  e608625baeeb_initial_schema.py
scripts/: docker-entrypoint.sh  migrate-if-needed.sh  start.sh  upload_badge_images.sh
