[project]
name = "phreaknic26-badge-server"
version = "0.1.0"
description = "Badge image selection service for PhreakNIC 26"
authors = [{name = "PhreakNIC Team"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.114.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "asyncpg>=0.29.0,<0.30.0",
    "jinja2>=3.1.0,<3.2.0",
    "python-multipart>=0.0.9,<0.0.10",
    "greenlet>=3.2.4",
    "sqlalchemy[asyncio]>=2.0.44",
    "pillow>=12.0.0",
    "alembic>=1.17.1",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5,<0.6.0",
    "pytest>=8.2.0,<8.3.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "httpx>=0.27.0,<0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
managed = true
